# cg-bruteforce

./: Cargo.toml  README.md  done.txt  found.txt  patterns.txt
src/: evaluate.rs  generator.rs  main.rs
