[package]
name = "code-brute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.1"
v8 = "0.63.0"
regex = "1.5.4"
threadpool = "1.8.1"
num_cpus = "1.13.0"
tokio = { version = "1.10.0", features = ["full"] }
itertools = "0.10.1"
rand = "0.8.3"
quick-js= "0.4.1"